--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,15 @@ a:hover {
 
 p{
 
-    font-family: "Helvetica", sans-serif;
+    font-family: "Poppins", sans-serif;
+
+}
+
+.paragraph
+{
+  font-size:20px;
+  line-height: 30px;
+  font-family: "Poppins", sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -298,7 +306,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #hero-page {
   width: 100%;
-  height: 100vh;
+  height: 40vh;
   background: url("/assets/img/Personal/Prototype_main.jpeg") no-repeat;
   background-size: cover;
   position: relative;
@@ -316,7 +324,6 @@ h1, h2, h3, h4, h5, h6 {
   top: 0;
   left: 0;
   right: 0;
-  background: rgba(0,0,0,0.7);
 }
 
 #hero-page h1 {
@@ -624,7 +631,7 @@ section {
 .facts .count-box {
   padding: 30px 30px 25px 30px;
   margin-top: 30px;
-  width: 100%;
+  width: 50%;
   position: relative;
   text-align: center;
   background: inherit;
@@ -646,7 +653,7 @@ section {
   font-size: 60px;
   display: block;
   font-weight: 600;
-  color: #011426;
+  color: #17a2b8;
   font-family: "Poppins", sans-serif;
 }
 
@@ -1439,6 +1446,8 @@ background: linear-gradient(to right, #434343, #000000); /* W3C, IE 10+/ Edge, F
 	width:auto;
 	height:200px;
 	vertical-align:middle;
+  margin:0;
+  display:block;
 }
 
 .introtext
@@ -1535,15 +1544,16 @@ background: linear-gradient(to right, #434343, #000000); /* W3C, IE 10+/ Edge, F
 
 
 .avatar4
-{	text-align:center;
+{align-items:center;
 width:50%;
 display:block;
-margin:auto;
+margin:auto !important;
 }
 
 .countermargin
 {
-	margin-top:30px;
+	margin-left:30px;
+  margin-right:30px
 }
 
 blockquote {
@@ -1786,6 +1796,15 @@ margin-left:60px;
 	height:auto;
 	opacity:0.6;
 	position:relative;
+}
+
+.avatar13
+{
+	width:60%;
+  margin:auto;
+  display:flex;
+
+	align-content:center  !important;
 }
 .zoom:hover {
   transform: scale(1.2);  /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
@@ -2040,8 +2059,6 @@ margin-left:60px;
 
 .expander{
    position: absolute;
-   top: 200px;
-   width: 100%;
 }
 
 .expander span
@@ -2155,4 +2172,87 @@ margin-left:60px;
 mark{
  background-color:#082567 !important;
  color:#fff;
+}
+
+.impact
+{
+  background-color:#e7e7e7 /*#ffffe4*/ !important;
+}
+
+
+.otro-blockquote{
+  font-size: 1.4em;
+  width:60%;
+  margin:50px auto;
+  font-family:Open Sans;
+  font-style:italic;
+  color: #555555;
+  padding:1.2em 30px 1.2em 75px;
+  border-left:8px solid #78C0A8 ;
+  line-height:1.6;
+  position: relative;
+  background:#EDEDED;
+}
+
+.otro-blockquote::before{
+  font-family:Arial;
+  content: "\201C";
+  color:#78C0A8;
+  font-size:4em;
+  position: absolute;
+  left: 10px;
+  top:-10px;
+}
+
+.otro-blockquote::after{
+  content: '';
+}
+
+.otro-blockquote span{
+  display:block;
+  color:#333333;
+  font-style: normal;
+  font-weight: bold;
+  margin-top:1em;
+}
+
+
+.containerblue
+{
+  background-color:#343434;
+  border-radius:10px;
+}
+
+
+
+.uppermargin3
+{
+  padding-top:50px;
+  margin-top:25px;
+}
+
+.color-x
+{
+  color:#FFd600;
+  font-family:"Source Sans Pro", sans-serif;
+}
+
+.box
+{
+  border: 1px solid #fff;
+}
+
+.checked {
+  color: orange;
+  font-size:50px !important;
+}
+
+.fa-star {
+  font-size:50px !important;
+}
+
+.color-y
+{
+  border-radius:10px;
+  background-color:#B9D9EB;
 }
