--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2257,7 +2257,7 @@ mark{
 }
 
 
-/*FIGMA CONTAINER */
+/*FIGMA CONTAINER
 
 .v21_6 {
   width: 100%;
@@ -2418,3 +2418,5 @@ mark{
   opacity: 1;
   text-align: left;
 }
+
+ */
