--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2379,7 +2379,7 @@ mark{
 .v21_2 {
   width: 600px;
   height: 5vh;
-  background: url("/assets/img/Personal/prototype_color.png") no repeat center;
+  background-image: url("/assets/img/Personal/prototype_color.png") no repeat center;
   background-size: cover;
   opacity: 1;
   position: absolute;
