More than last commit.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2279,7 +2279,7 @@ mark{
 .color-y
 {
   border-radius:10px;
-  background-color:#B9D9EB;
+  background-color:#F0F8FF;
   box-shadow: 0 0 4px rgba(0,0,0,0.6);
 -moz-box-shadow: 0 0 4px rgba(0,0,0,0.6);
 -webkit-box-shadow: 0 0 4px rgba(0,0,0,0.6);
