--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2262,11 +2262,11 @@ mark{
 .color-y
 {
   border-radius:10px;
-  background-color:#B9D9EB;
-  box-shadow: 0 0 4px rgba(0,0,0,0.6);
--moz-box-shadow: 0 0 4px rgba(0,0,0,0.6);
--webkit-box-shadow: 0 0 4px rgba(0,0,0,0.6);
--o-box-shadow: 0 0 4px rgba(0,0,0,0.6);
+  background-color:#f5f5f5;
+  box-shadow: 0 0 1px rgba(0,0,0,0.6);
+-moz-box-shadow: 0 0 1px rgba(0,0,0,0.6);
+-webkit-box-shadow: 0 0 1px rgba(0,0,0,0.6);
+-o-box-shadow: 0 0 1px rgba(0,0,0,0.6);
 }
 }
 
