CSS COde commit

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1438,7 +1438,7 @@ background: linear-gradient(to right, #434343, #000000); /* W3C, IE 10+/ Edge, F
 */
 #footer .social-links a:hover
 {
-  color:#66023c;
+  color:#FFD700;
   }
 
 
