--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2462,10 +2462,24 @@ position: relative;
 /*----------------------------------------------
     MOD: MARKER OUTLINE
 ----------------------------------------------*/
-.marker-outline .timeline-marker:before {
-  background: transparent;
-  border-color: #FF6B6B;
+
+
+
+.quotemarks {
+  display: inline;
+  font-size: 1.5rem;
+  line-height:1.5;
+  font-size:15px;
+  color:#004687;
 }
-.marker-outline .timeline-item:hover .timeline-marker:before {
-  background: #FF6B6B;
+.blockquote-section {width:100%;max-width:1200px;margin:0 auto;opacity:0.95;padding:20px;}
+.blockquote-section > cite {font-style:none}
+.cite {color:white;padding-left:20px;font-size:1.25rem;}
+
+
+.devicer {
+  width: 20em;
+  height: 1px;
+  background-color: #a0a0a0;
+  margin: 60px auto 0;
 }
