--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -288,6 +288,9 @@ h1, h2, h3, h4, h5, h6 {
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
+
+/* hero 5 beginning */
+
 #hero {
   width: 100%;
   height: auto;
